samples/_failures_safe/1761138750_6ebe7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec4d16ba.c: In function ‘main’:
./samples/SAFE/__tmp_ec4d16ba.c:146:11: error: expected ‘;’ at end of input
  146 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_ec4d16ba.c:146:5: error: expected declaration or statement at end of input
  146 |     printf
      |     ^~~~~~
